# kythira

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  BUILD_STATUS.md  CLAUDE.md  CMakeLists.txt  DEPENDENCIES.md  Doxyfile  PERFORMANCE_VALIDATION.md  RAFT_TESTS_FINAL_STATUS.md  README.md  TEST_FIX_SUMMARY.md  build_system_fixes_summary.md  coverage_floor.txt  debug_accept_test  debug_accept_test.cpp  debug_boost_test.cpp  debug_connect_test  debug_connect_test.cpp  debug_connection_test  debug_connection_test.cpp  debug_folly_future_test.cpp  debug_property_test  debug_property_test.cpp  fix_all_raft_methods.py  fix_all_templates.py  fix_completion_tests.py  fix_raft_complete.py  fix_raft_comprehensive.py  fix_raft_method_templates.py  fix_raft_namespaces.py  fix_raft_template_issues.py  fix_remaining_templates.sh  fix_templates.py  remove_duplicates.py  run_performance_validation.sh  simple_concept_test.cpp  standalone_template_test  standalone_template_test.cpp  (+5 more)
.kiro/: specs
cmake/: llvm_coverage.cmake
cmd/ca_cluster_node/: CMakeLists.txt  config.hpp  main.cpp
cmd/ca_service/: CMakeLists.txt  main.cpp
cmd/chaos_node/: CMakeLists.txt  config.hpp  fiu_remote.hpp  http_control.hpp  main.cpp
cmd/dns_sd_discovery_node/: CMakeLists.txt  main.cpp
cmd/poco_discovery_node/: CMakeLists.txt  main.cpp
doc/: CHANGELOG.md  OPTIONAL_TASKS_STATUS.md  PERFORMANCE_VALIDATION.md  RAFT_IMPLEMENTATION_STATUS.md  RAFT_MULTI_NODE_FIXTURE_README.md  RAFT_MULTI_NODE_FIXTURE_SUMMARY.md  RAFT_OPTIMIZATION_OPPORTUNITIES.md  RAFT_PERFORMANCE_ANALYSIS.md  RAFT_PERFORMANCE_FRAMEWORK_SUMMARY.md  RAFT_PHASE1_OPTIMIZATIONS_SUMMARY.md  RAFT_PRODUCTION_REDINESS.md  RAFT_TESTS_FINAL_STATUS.md  SPEC_EXECUTION_COMPLETE_SUMMARY.md  TODO.md  async_retry_patterns.md  async_retry_validation.md  aws_acm_pca_test_cost_estimate.md  breaking_changes_notes.md  build_system_fixes_summary.md  coap_dtls_configuration.md  coap_performance_tuning.md  coap_transport_README.md  coap_transport_api.md  coap_troubleshooting.md  concepts_api_reference.md  concepts_documentation.md  concepts_migration_guide.md  concepts_summary.md  folly_concept_wrappers_api_reference.md  folly_concept_wrappers_documentation.md  folly_concept_wrappers_migration_guide.md  future_migration_guide.md  (+23 more)
examples/: CMakeLists.txt  basic_connectionless.cpp  concepts_usage_examples.cpp  connection_oriented.cpp  custom_types_example.cpp  generic_future_example.cpp  generic_future_network_simulator_example.cpp  generic_future_transport_example.cpp  http_transport_ssl_example.cpp  migration_guide_example.cpp  network_topology.cpp  performance_benchmark_report.cpp
examples/folly-wrappers/: collector_example.cpp  continuation_example.cpp  executor_example.cpp  factory_example.cpp  promise_example.cpp
examples/future-backend-benchmark/: benchmark_harness.hpp  benchmark_report.cpp
examples/raft/: CMakeLists.txt  async_operations_example.cpp  basic_cluster.cpp  coap_block_transfer_example.cpp  coap_dtls_security_example.cpp  coap_final_integration_validation.cpp  coap_multicast_example.cpp  coap_performance_validation_example.cpp  coap_raft_integration_example.cpp  coap_transport_basic_example.cpp  coap_transport_basic_example_fixed.cpp  commit_waiting_example.cpp  configuration_sync_example.cpp  error_handling_example.cpp  failure_scenarios.cpp  http_transport_example.cpp  membership_changes.cpp  snapshot_example.cpp  state_machine_example.cpp  state_machine_migration_example.cpp  unified_types_example.cpp
examples/stdexec-backend/: migration_guide_example.cpp
tests/: CMakeLists.txt  HTTPLIB_FINDINGS.md  INTEGRATION_TEST_SUMMARY.md  TEST_ORGANIZATION.md  WRAPPER_UNIT_TEST_SUMMARY.md  acme_certificate_provider_test.cpp  acme_identifier_type_test.cpp  acme_jws_unit_test.cpp  acme_test_server.hpp  acme_test_server_unit_test.cpp  aws_acm_pca_provider_unit_test.cpp  aws_quorum_manager_localstack_test.cpp  aws_quorum_manager_real_ec2_test.cpp  aws_quorum_manager_unit_test.cpp  aws_real_ec2_test_support.hpp  backend_non_interference_compile_fail_test.cpp  backend_selection_isolation_property_test.cpp  behavioral_preservation_property_test.cpp  bootstrap_property_test.cpp  bootstrap_unit_test.cpp  build_success_property_test.cpp  ca_bootstrap_client_test.cpp  ca_cluster_node_localstack_test.cpp  ca_cluster_node_real_ec2_test.cpp  ca_cluster_node_rpc_tls_real_ec2_test.cpp  ca_cluster_node_rpc_tls_restart_test.cpp  ca_cluster_node_rpc_tls_test.cpp  ca_cluster_node_test.cpp  ca_service_serve_integration_test.cpp  ca_state_machine_unit_test.cpp  ca_test_fixture.hpp  ca_test_fixture_unit_test.cpp  certificate_authority_property_test.cpp  certificate_authority_unit_test.cpp  coap_ace_oauth_test.cpp  coap_block_transfer_property_test.cpp  coap_certificate_validation_failure_property_test.cpp  coap_cipher_suite_property_test.cpp  coap_comprehensive_error_handling_property_test.cpp  coap_concept_conformance_test.cpp  (+368 more)
tests/chaos/: CMakeLists.txt  chaos_commit_recovery_test.cpp  chaos_election_safety_test.cpp  chaos_leader_completeness_test.cpp  chaos_leader_election_recovery_test.cpp  chaos_log_matching_test.cpp  chaos_persistence_degradation_recovery_test.cpp  chaos_profiles_test.cpp  chaos_smoke_test.cpp  chaos_state_machine_recovery_test.cpp  chaos_state_machine_safety_test.cpp  chaos_test_types.hpp  dns_peer_discovery_chaos_test.cpp  fault_profiles.hpp  fiu_remote_unit_test.cpp  safety_assertions.hpp
tests/docker_chaos/: CMakeLists.txt  az_partition_test.cpp  chaos_smoke_test.cpp  crash_recovery_test.cpp  dns_discovery_test.cpp  dns_sd_discovery_test.cpp  election_recovery_test.cpp  fault_control.hpp  fault_control_unit_test.cpp  harness.hpp  harness_unit_test.cpp  network_degradation_test.cpp  os_faults.hpp  otlp_collector_test.cpp  persistence_faults_test.cpp  poco_discovery_test.cpp  quorum_harness.hpp  quorum_healing_test.cpp  safety_assertions_test.cpp
vcpkg-overlays/lakers/ffi/: Cargo.toml
vcpkg-overlays/lakers/ffi/include/: lakers_kythira.h
vcpkg-overlays/lakers/ffi/src/: lib.rs
vcpkg-overlays/lakers/ffi/tests/: handshake.rs
(+567 files in other folders)
